# pitch_frontend

./: .gitignore  .gitmodules  CMakeLists.txt
pitch_frontend/: CMakeLists.txt  WinMain.cpp
pitch_frontend/core/: CMakeLists.txt
pitch_frontend/core/container/: locked_message_queue.h  locked_message_queue.hpp  typelist.h
pitch_frontend/core/graphics/: CMakeLists.txt  camera.cpp  camera.h  color.cpp  color.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  vertex_array_object.cpp  vertex_array_object.h  vertex_buffer_object.cpp  vertex_buffer_object.h  window.cpp  window.h
pitch_frontend/core/math/: CMakeLists.txt  mat.h  mat.hpp  operations.h  operations.hpp  point.h  point.hpp  trig.cpp  trig.h  vec.cpp  vec.h  vec.hpp
pitch_frontend/core/util/: CMakeLists.txt  algorithm.h  file_io.cpp  file_io.h  resource_loader.cpp  resource_loader.h
pitch_frontend/game/: CMakeLists.txt  bid_menu.cpp  bid_menu.h  card.cpp  card.h  messages.cpp  messages.h  player.cpp  player.h  player_hand.h  socket_thread.cpp  socket_thread.h  start_menu.cpp  start_menu.h
pitch_frontend/res/shaders/: position_texture_fragment.glsl  position_texture_vertex.glsl
